24 June 2005 Andreas Fabri
- Removed  #ifndef CGAL_NO_DEPRECATED_CODE for Construct_vector_2 and Construct_direction_2

18 June 2005 Andreas Fabri
- Moved code from Kernel_class_2 to the functors

19 May 2005 Sylvain Pion
- Add centroid(Triangle_[23]) and centroid(Tetrahedron_3).

11 May 2005 Sylvain Pion
- New predicate : orientation(2 Vector_2).

8 March 2005 Sylvain Pion
- Fix for mpz_class : no implicit conversion from expression-template
  to Quotient<mpz_class>, it seems.

=============================== CGAL 3.1 ========================

11 August 2004 Sylvain Pion
- Qualify min/max calls by CGAL_NTS.

22 June 2004 Sylvain Pion
- Undeprecate construction functors from NTs.

20 June 2004 Sylvain Pion
- Add missing this->.
- Replace some CGAL:: by CGAL_NTS.

20 May 2004 Sylvain Pion
- Add forgotten #include<CGAL/Bbox_[23].h>.

19 May 2004 Andreas Fabri
- The global_operators from VectorH2.h are turned into function objects

19 May 2004 Sylvain Pion
- Homogeneous_converter : add conversions for RT, FT, Bbox_2 and Bbox_3.

16 March 2004 Andreas Fabri
- Move the following to the new scheme :
  signed_distance_to_{point,line_plane}

13 Mar 2004 Sylvain Pion
- Move centroid() to the new scheme.

13 Mar 2004 Sylvain Pion
- Use LineC3 instead of LineH3.
- Merge Construct_line_3 between H&C.
- Duplicate Construct_projected_point_3 between H&C.

13 Mar 2004 Sylvain Pion
- Factorize identical Coplanar_3 functors between H&C.
- Move to the new scheme :
  orientation(4 Point_3), coplanar(4 Point_3),
  are_positive_oriented(4 Point_3), are_negative_oriented(4 Point_3),
  side_of_oriented_sphere(5 Point_3)

13 Mar 2004 Sylvain Pion
- Use TetrahedronC3 instead of TetrahedronH3.
  Duplicate Compute_volume_3 and Bounded_side_3 functors instead.

13 Mar 2004 Sylvain Pion
- Use TriangleC3 instead of TriangleH3.
  Duplicated Has_on_3 instead.

13 Mar 2004 Sylvain Pion
- Move the following to the new scheme :
  area(3 Point_2), operator-(2 Point_[23]), collinear(3 Point_3),